<package>
  <name>rosaria</name>
  <version>0.9.0</version>
  <description>
    The <tt>RosAria</tt> node provides a ROS interface for most Adept MobileRobots, 
    MobileRobots Inc., and ActivMedia mobile robot bases including
    Pioneer 2, Pioneer 3, AmigoBot, PeopleBot, PowerBot, PatrolBot, Seekur,
    Seekur Jr., Pioneer LX,
    and any other past, current or future robot base supported by Adept MobileRobot's 
    open source ARIA library. 
    Information from the robot base, and velocity and acceleration control, is implemented
    via a <tt>RosAria</tt> node, which publishes topics providing data recieved from
    the robot's embedded controller by ARIA, and sets desired velocity, acceleration and 
    other commands in ARIA when new commands are received from command topics.
  </description>
  <maintainer email="srecko.juric-kavelj@fer.hr">Srećko Jurić-Kavelj</maintainer>
  <maintainer email="ivan.markovic@fer.hr">Ivan Marković</maintainer>
  <maintainer email="reed.hedges@aedpt.com">Reed Hedges</maintainer>

  <license>GPLv2</license>

  <url type="website">http://www.ros.org/wiki/ROSARIA</url>
  <url type="bugtracker">https://github.com/amor-ros-pkg/rosaria/issues</url> 

  <author>Srećko Jurić-Kavelj</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>libaria</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>libaria</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>std_srvs</run_depend>
  <!-- <test_depend>Aria</test_depend>
  <test_depend>roscpp</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>tf</test_depend> -->

  <export>

  </export>
</package>
